<resources>
    <!-- The string for app name -->
    <string name="app_name">Soccer Counter</string>

    <!-- The string for rest value match -->
    <string name="resetValueTxt">0</string>

    <!-- The string for the name of team A -->
    <string name="teamA">Roma</string>

    <!-- The string for the name of team B -->
    <string name="teamB">Lazio</string>

    <!-- The string for button GOAL!!! -->
    <string name="addPoint">Goal!!!</string>

    <!-- The string for button reset match -->
    <string name="resetValueBtn">Reset Match</string>

</resources>
